# large-scale-ibma

./: .gitignore  README.md  brainmaps_clustering.py  cbma_workflow.py  cogat_workflow.py  gen_nimare_dset.py  get_nv_collections.py  get_nv_images.py  ibma.py  ibma_hedges_workflow.py  ibma_stouffers_workflow.py  ibma_workflow.py  lda.py  neurovault_clustering.py  outlier.py  pubmed_cbma_workflow.py  pubmed_download.py  pubmed_ibma_workflow.py  pubmed_lda.py  pyproject.toml  requirements.txt  utils.py
env/: activate_env  create_env.sh
experiments/: cogat_download.py  pubmed_download.py  pubmed_ibma_workflow.py
figures/: dataset.ipynb  infer_metadata.ipynb  neurovault_data.ipynb  pubmed_results.ipynb  stouffers_variations.ipynb  utils.py
jobs/: run_cbma_workflow.sbatch  run_cogat_workflow.sbatch  run_get_nv_collections.sh  run_ibma_workflow.sbatch  run_nv-data_workflow.sh  run_pubmed_cbma_workflow.sbatch  run_pubmed_download.sh  run_pubmed_ibma_workflow.sbatch  run_pubmed_lda.sh
