[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gradec"
description = "Large-scale automated IBMA"
license = { file = "LICENSE" }
authors = [{ name = "Julio A Peraza" }]
maintainers = [{ name = "Julio A Peraza", email = "jperaza@fiu.edu" }]
readme = "README.md"
requires-python = "=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[tool.flake8]
max-line-length = 99
exclude = ["*build/"]
ignore = ["E203", "E402", "E722", "W503"]
per-file-ignores = """
    */__init__.py:D401
"""
docstring-convention = "numpy"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )
)
'''
